--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,7 +7,7 @@
 $fa-font-path: "../webfonts";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+//@import '~bootstrap/scss/bootstrap';
 @import '~vue-material/dist/theme/default.css';
 @import '~vue-material/dist/vue-material.min.css';
 
